implement api for new scheme
