# internal/openapi/mawinter-api.yaml
@@ -35,23 +35,6 @@ paths:
       responses: {}
       servers:
         - url: 'http://localhost:8080'
-  '/v2/table/{year}':
-    post:
-      summary: create record table
-      operationId: post-v2-table-year
-      parameters:
-        - name: year
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        '201':
-          description: Created
-        '204':
-          description: No Content
-      servers:
-        - url: 'http://localhost:8080'
   /v2/record:
     post:
       summary: create record
@@ -74,10 +57,33 @@ paths:
                 $ref: '#/components/schemas/record'
       servers:
         - url: 'http://localhost:8080'
+    get:
+      summary: ''
+      operationId: get-v2-record
+      parameters:
+        - name: num
+          in: query
+          description: the number of records
+          schema:
+            type: integer
+            default: 20
+      requestBody:
+        content: {}
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/record'
+      servers:
+        - url: 'http://localhost:8080'
   /v2/record/fixmonth:
     post:
       summary: create fixmonth record
-      description: DBに登録している固定費テーブルの内容を、当月のRecord_YYYYMMに追加する
+      description: DBに登録している固定費テーブルの内容を、Record に追加する
       operationId: post-v2-record-fixmonth
       parameters:
         - name: yyyymm
